<resources>
    <string name="app_name">NasaImg 1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home 1.0</string>
    <string name="navsaved">Saved</string>
    <string name="navhome">Home</string>
    <string name="navrandom">Random</string>
    <string name="navsearchimg">Search</string>
    <string name="saved">Saved  1.0</string>
    <string name="savedsuccess">Saved Images Succssfully</string>
    <string name="dbfail">Failed to save data to database</string>
    <string name="random">Random 1.0</string>
    <string name="searchimg">Search 1.0</string>
    <string name="exits">Exit</string>
    <string name="hello">Hello Welcome to the NASA Image App</string>
    <string name="today">Today\'sImage</string>
    <string name="date">Date: </string>
    <string name="url">URL: </string>
    <string name="hdurl">HDURL: </string>
    <string name="genrand">Generate Random Image</string>
    <string name="save">Save</string>
    <string name="enterdate">Enter Date (YYYY-MM-DD)</string>
    <string name="search">Search</string>
    <string name="fail">Failed to load image</string>
    <string name="failfetch">Failed to fetch image</string>
    <string name="successfetch">Image Fetch Successful</string>
    <string name="welcome">Welcome back</string>
    <string name="changeuser">Do you want to keep using the name</string>
    <string name="yes">Yes</string>
    <string name="no">No, enter a new name</string>
    <string name="greet">Hello</string>
    <string name="greet2">Welcome To NASA Image App</string>
    <string name="personalgreet">Welcome</string>
    <string name="personalgreet2">Please enter your name to personalize the experience:</string>
    <string name="deletesuccess">Image deleted</string>
    <string name="deletefail">Failed to delete image</string>
    <string name="question">Do you wish to view the image or delete?</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="searchhelp">Welcome to Search Images, here you can manually type a date like YYYY-MM-DD or use the calendar by clicking the Search Button. Once the image is loaded, you can click Save to save a copy.</string>
    <string name="homehelp">Welcome to Nase Images Home, here you can see todays Nasa Image! Click save to view it later on the device. Please user our navigation or toolbar icons to explore the app</string>
    <string name="savedhelp">Welcome to Save Images, here all your saved images are listed by date. Click on any date for the image and its details to be loaded in a fragment from both the devices local storage and SQLite DB</string>
    <string name="randomhelp">Welcome to Random Images, here you can click the Generate Image button to generate a random image by date, if you like the image you can click save to view it later</string>
</resources>