<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Home"
        android:title="@string/navhome"
        android:icon="@drawable/enter"
        app:showAsAction="never"/>
    <item
        android:id="@+id/searchImages"
        android:icon="@drawable/search"
        android:title="@string/navsearchimg"
        app:showAsAction="never"/>
    <item
        android:id="@+id/savedImages"
        android:title="@string/navsaved"
        android:icon="@drawable/img"
        app:showAsAction="never"/>

    <item
        android:id="@+id/randomImages"
        android:title="@string/navrandom"
        android:icon="@drawable/lotto"
        app:showAsAction="never"/>

    <item
        android:id="@+id/Exit"
        android:title="@string/exits"
        android:icon="@drawable/exit"
        app:showAsAction="never"/>


</menu>
