<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/textViewRandomDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageViewRandomImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/textViewRandomDate"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/textViewRandomImageURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewRandomImage"
        android:text="@string/url"
        android:autoLink="web"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewRandomHDImageURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_below="@id/textViewRandomImageURL"
        android:text="@string/hdurl"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRandomHDImageURL"
        android:text="@string/genrand" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/generateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="saveImage"
        android:text="@string/save" />

</RelativeLayout>
